[gd_scene load_steps=7 format=3 uid="uid://cwe3r2tbh2og1"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Common/sidebar.gd" id="1_jnq65"]
[ext_resource type="Script" path="res://addons/dialogic/Editor/Common/update_manager.gd" id="2_y3xoo"]

[sub_resource type="Theme" id="Theme_pn0f4"]
VBoxContainer/constants/separation = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxwm6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8rql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thnvk"]

[node name="SideBar" type="VSplitContainer"]
custom_minimum_size = Vector2(100, 130)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_pn0f4")
split_offset = 100
script = ExtResource("1_jnq65")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Margin" type="MarginContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5

[node name="VSplitContainer" type="VSplitContainer" parent="VBox/Margin"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="VBox/Margin/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="VBox/Margin/VSplitContainer/VBox"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.623529)
texture_filter = 6
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
expand_mode = 3
stretch_mode = 4

[node name="CurrentResource" type="Label" parent="VBox/Margin/VSplitContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "No resource"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="Search" type="LineEdit" parent="VBox/Margin/VSplitContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Filter Resources"
caret_blink = true
caret_blink_interval = 0.5

[node name="ResourcesList" type="ItemList" parent="VBox/Margin/VSplitContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
same_column_width = true

[node name="ContentListSection" type="VBoxContainer" parent="VBox/Margin/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ContentList" type="ItemList" parent="VBox/Margin/VSplitContainer/ContentListSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/selected = SubResource("StyleBoxEmpty_gxwm6")
theme_override_styles/selected_focus = SubResource("StyleBoxEmpty_n8rql")
allow_reselect = true
same_column_width = true

[node name="CurrentVersion" type="Button" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_thnvk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_thnvk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_thnvk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_thnvk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_thnvk")
text = "Some Version"

[node name="UpdateManager" type="Node" parent="."]
script = ExtResource("2_y3xoo")

[node name="UpdateCheckRequest" type="HTTPRequest" parent="UpdateManager"]

[node name="UpdateInstallRequest" type="HTTPRequest" parent="UpdateManager"]

[connection signal="gui_input" from="VBox/Margin/VSplitContainer/VBox/Logo" to="." method="_on_logo_gui_input"]
[connection signal="text_changed" from="VBox/Margin/VSplitContainer/VBox/Search" to="." method="_on_search_text_changed"]
[connection signal="pressed" from="VBox/CurrentVersion" to="." method="_on_current_version_pressed"]
[connection signal="update_check_completed" from="UpdateManager" to="." method="_on_update_manager_update_check_completed"]
[connection signal="request_completed" from="UpdateManager/UpdateCheckRequest" to="UpdateManager" method="_on_UpdateCheck_request_completed"]
